# paca

./: PACA실작동준비가이드.md  README.md  gemini_sdk.txt  pytest.ini
paca_python/: .coverage  .env.production  .gitignore  Dockerfile  MANIFEST.in  PACA_SIMPLE.bat  PACA_WORKS.bat  docker-compose.yml  fix_paths_auto.py  paca_ascii_only.py  production_server.py  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py  test_paca_interactive.py  test_paca_simple.py  사용법.txt
paca_python/.github/workflows/: memory_backup.yml
paca_python/cognitive/: _collab_policy_loader.py
paca_python/config/: collab_policy.json
paca_python/data/: README.md
paca_python/data/backups/: README.md
paca_python/data/cache/: README.md
paca_python/data/config/: README.md  complexity_thresholds.json  memory_settings.json  portable_test.json  reasoning_strategy.json  test_config.json  test_portable.json
paca_python/data/database/: README.md  feedback.db  learning_memory.db  longterm_memory.db  test.db
paca_python/data/memory/: README.md
paca_python/desktop_app/: README.md  __init__.py  api_key_store.py  debug_panel.py  enhanced_gui.py  main.py
paca_python/desktop_app/assets/: README.md
paca_python/desktop_app/ui/: README.md  __init__.py  chat_interface.py  settings_panel.py  status_bar.py
paca_python/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  LLM_통합_모킹전략.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  USER_GUIDE_EN.md
paca_python/docs/phase2/: complexity_metacognition_design.md  longterm_external_storage.md  memory_layer_design.md  testing_strategy.md
paca_python/docs/reports/: INSTALL.md  PACA_REAL_OPERATION_ISSUES_REPORT.md  PHASE1_CACHE_COMPLETION_REPORT.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_4_IMPLEMENTATION_COMPLETION_REPORT.md  PORTABLE_COMPLETE_GUIDE.md  PORTABLE_README.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_FIXES_README.md  README.md  SETUP_PHASE1.md  SETUP_PHASE2.md  dependency_graph.dot  dependency_graph.json  dependency_report.md  dependency_report_updated.md  integration_report_simple.json  memory_optimization_report.json  paca_v5_final_test_results.json  performance_report_simple.json  portability_summary.md  (+2 more)
paca_python/monitoring/: README.md  prometheus.yml
paca_python/paca/: README.md  __init__.py  __main__.py  cli.py  system.py
paca_python/scripts/: README.md  auto_documentation_system.py  code_analyzer.py  dependency_mapper.py  doc_generator.py  performance_optimizer.py  setup_packaging.py  template_engine.py
paca_python/tests/: README.md  conftest.py  test_api_key_store.py  test_auto_learning_async_io.py  test_auto_learning_integration.py  test_cli_config_option.py  test_cli_exception_logging.py  test_collab_policy_loader.py  test_context_manager.py  test_core_result_helpers.py  test_event_bus_integration.py  test_gemini_context_integration.py  test_gemini_key_manager.py  test_llm_config_defaults.py  test_llm_ensemble.py  test_reasoning_basic.py  test_structured_logger.py  test_system_basic.py  test_system_fallback_response.py  test_system_phase1.py  test_tool_safety_policy.py
(+368 files in other folders)
